# --
# Changes of OTRS 
# Copyright (C) 2002-2003 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.48 2003-01-12 09:56:45 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see 
# the enclosed file COPYING for license information (GPL). If you 
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
1.0 RC2 (2003-01-??)
 - (2003/01/12) added spanisch translation! Thanks to Jorge Becerra!
 - (2003/01/11) fixed AgentPhone bug of Time() in subject - 
    Time(DateFormatLong) was shown
1.0 RC1 (2003-01-09)
 - (2003/01/09) added AgentTicketPrint (Ticket Print View)
 - (2003/01/09) improved Kernel::System::Ticket::IndexAccelerator::RuntimeDB
    and StaticDB (for locked tickets).
 - (2003/01/09) removed Kernel::System::Ticket::IndexAccelerator::FS 
    because RuntimeDB and StaticDB is enough
 - (2003/01/05) improved fulltext search (added ticket state search option)
 - (2003/01/05) added CMD option to bin/GenericAgent.pl (so you can
    execute own programs on GenericAgent.pl actions - e. g. send 
    special admin emails)
 - (2003/01/02) added attachments support for std. responses  
 - (2002/12/27) added filters (All, Open, New, Pending, Reminder) to 
    AgentMailbox (locked-ticket-view)
 - (2002/12/24) added pending feature for tickets
 - (2002/12/20) added Kernel::System::Ticket::ArticleStorage* modules
    for attachments in database or fs (needs to update the database 
    (scripts/DBUpdate.(mysql|postgesql).sql)! The main reason is a lot 
    of people have problems with the file permissions of the local otrs 
    and webserver user (often incoming emails are shown some times again). 
    TicketStorageModule in Kernel/Config.pm.
     * Kernel::System::Ticket::ArticleStorageDB -> (default)
     * Kernel::System::Ticket::ArticleStorageFS -> (faster but webserver 
        user should be the otrs user - use it for larger setups!)
 - (2002/12/19) attachment support (send and view) for customer panel!